--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,21 @@
+* {
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
+}
 
 
 body {
+    width: 100%;
+    min-height: 100vh;
+
+
+
     background-color: #90D5FF;
     color: white;
     padding-left: 30%;
-    padding-top: 10%;
+    border-left: 30%;
+    padding-top: 15%;
     /* padding-right: 40%; */
 }
 
@@ -12,37 +23,104 @@ h4 {
    display: flex;
    flex-direction: column;
    justify-content:center;
-   font-size: 3em;
    /* align-items:center; */
    text-align: left ;
-
    font-family: "dynapuff", sans-serif;
-
-
-}
-
-h4:hover {
+   font-size: 3em;
 
 }
+
+
 
 a {
     text-decoration: none;
+    color: #FFDE21;
+    transition-duration: 2s;
 }
 
-#so {
-transition-duration: 2s;
-/* transition-delay: 1.5s;  */
-
+a:hover {
+    /* color: white; */
+    transform: scale(2);
 }
 
-#so:hover {
-  transform: scale(2);
-}
 
-#mOne {
-
+.soGood {
+ 
 }
 
 #good {
     color: green;
 }
+
+
+
+/* page one */
+
+#so {
+    animation-name: scaleIn;
+    animation-duration: 2s;
+    animation-fill-mode: both;
+    
+   
+    
+    }
+    
+    #so:hover {
+    }
+
+    @keyframes scaleIn {
+        0% {transform: scale(1);}
+        100% {transform: scale(2);}
+        }
+    
+
+
+
+/* page two*/
+    #soSweet {
+        animation-name: reveal;
+        animation-duration: 1s;
+        animation-delay: 4.5s;
+        animation-fill-mode: both;
+        animation-timing-function: ease-out;
+    }
+
+    .mmm {
+        display: flex;
+        flex-direction: row;
+       
+    }
+    
+    #mOne {
+    animation-name: reveal;
+    animation-duration: 2s;
+    animation-delay: 0s;
+    padding-right: 2%;
+    
+    }
+    
+    #mTwo {
+        animation-name: reveal;
+    animation-duration: 2s;
+    animation-delay: 1s;
+    animation-fill-mode: both;
+    padding-right: 2%;
+
+    
+    
+    }
+    
+    #mThree {
+        animation-name: reveal;
+        animation-duration: 2s;
+        animation-delay: 1.5s;
+        animation-fill-mode: both;
+        padding-right: 2%;
+
+        }
+    
+    @keyframes reveal {
+       from {opacity:0;}
+       to {opacity:1;}
+       
+    }
