--- a/css/style.css
+++ b/css/style.css
@@ -35,12 +35,12 @@ h4 {
 a {
     text-decoration: none;
     color: #FFDE21;
-    transition-duration: 2s;
+    /* transition-duration: 2s; */
 }
 
 a:hover {
     /* color: white; */
-    transform: scale(2);
+    /* transform: scale(2); */
 }
 
 
@@ -57,21 +57,21 @@ a:hover {
 /* page one */
 
 #so {
-    animation-name: scaleIn;
-    animation-duration: 2s;
-    animation-fill-mode: both;
+   
+transition-duration: 1s; 
+/* position: fixed;
+top: 30%; */
     
    
     
     }
     
     #so:hover {
+        transform: scaleX(2);
+
     }
 
-    @keyframes scaleIn {
-        0% {transform: scale(1);}
-        100% {transform: scale(2);}
-        }
+    
     
 
 
@@ -124,3 +124,45 @@ a:hover {
        to {opacity:1;}
        
     }
+
+    /* page three */
+
+    .inOuterSpace {
+        /* display: flex; */
+        /* flex-direction: ; */
+    }
+
+
+
+
+
+    .logo.is-animetion {
+        margin-top: 0.6em;
+      }
+      
+      .logo.is-animetion span {
+        display: inline-block;
+        animation: wave-text 1s ease-in-out ;
+      }
+      
+      .logo.is-animetion {
+        span:nth-of-type(1){ animation-delay: 1.0s; }
+        span:nth-of-type(2){ animation-delay: 1.1s; }
+        span:nth-of-type(3){ animation-delay: 1.2s; }
+        span:nth-of-type(4){ animation-delay: 1.3s; }
+        span:nth-of-type(5){ animation-delay: 1.4s; }
+      }
+      /* code from https://codepen.io/qrac/pen/MRPJLB */
+      
+      @keyframes wave-text{
+        00%{
+          transform: translateY(0em);
+        }
+        60%{
+          transform: translateY(-0.6em);
+        }
+        100%{
+          transform: translateY(0em);
+        }
+      }
+      
