--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,7 @@
 body {
     width: 100%;
     min-height: 100vh;
-
-
+    /* display: inline-block; */
 
     background-color: #90D5FF;
     color: white;
@@ -35,42 +34,84 @@ h4 {
 a {
     text-decoration: none;
     color: #FFDE21;
-    /* transition-duration: 2s; */
+    transition-duration: 2s;
 }
 
 a:hover {
     /* color: white; */
+    /* transform: scale(1.5); */
     /* transform: scale(2); */
 }
-
-
-.soGood {
- 
-}
-
-#good {
-    color: green;
-}
-
-
 
 /* page one */
 
 #so {
-   
-transition-duration: 1s; 
-/* position: fixed;
-top: 30%; */
-    
-   
-    
+    /* background-color: blue; */
+   width: auto;
+transition-duration: 1.5s; 
+transition-delay: 0.5s;
+color: white;
+/* transition-timing-function: ease-out; */
+transform: scale(2) translate(25px);
     }
-    
-    #so:hover {
-        transform: scaleX(2);
+
+    .opening {
+      display: flex;
+      flex-direction: row;
+    }
+    .soundSoGood {
+      display: flex;
+      flex-direction: row;
+    }
+
+    #good {
+      transition-duration: 1.5s;
+      transition-delay: 0.5s;
+      transform: translate(100px, 0px);
+      animation-fill-mode: both;
 
     }
 
+    
+
+    /* start of code modified from https://codepen.io/qrac/pen/MRPJLB */
+
+    /* .logo.is-animetion {
+        margin-top: 0.6em;
+      }
+      
+      .logo.is-animetion span {
+        display: inline-block;
+        animation: wave-text 1s ease-in-out ;
+      }
+      
+      .logo.is-animetion {
+        span:nth-of-type(1){ animation-delay: 1.0s; }
+        span:nth-of-type(2){ animation-delay: 1.1s; }
+        span:nth-of-type(3){ animation-delay: 1.2s; }
+        span:nth-of-type(4){ animation-delay: 1.3s; }
+        span:nth-of-type(5){ animation-delay: 1.4s; }
+      }
+    
+      
+      @keyframes wave-text{
+        00%{
+          transform: translateY(0em);
+        }
+        60%{
+          transform: translateY(-0.6em);
+        }
+        100%{
+          transform: translateY(0em);
+        }
+      } */
+
+        /* modiefied code from https://codepen.io/qrac/pen/MRPJLB */
+      
+      section {
+        /* display: flex; */
+        /* flex-direction: row; */
+      }
     
     
 
@@ -132,37 +173,6 @@ top: 30%; */
         /* flex-direction: ; */
     }
 
+    /* page five */
 
-
-
-
-    .logo.is-animetion {
-        margin-top: 0.6em;
-      }
-      
-      .logo.is-animetion span {
-        display: inline-block;
-        animation: wave-text 1s ease-in-out ;
-      }
-      
-      .logo.is-animetion {
-        span:nth-of-type(1){ animation-delay: 1.0s; }
-        span:nth-of-type(2){ animation-delay: 1.1s; }
-        span:nth-of-type(3){ animation-delay: 1.2s; }
-        span:nth-of-type(4){ animation-delay: 1.3s; }
-        span:nth-of-type(5){ animation-delay: 1.4s; }
-      }
-      /* code from https://codepen.io/qrac/pen/MRPJLB */
-      
-      @keyframes wave-text{
-        00%{
-          transform: translateY(0em);
-        }
-        60%{
-          transform: translateY(-0.6em);
-        }
-        100%{
-          transform: translateY(0em);
-        }
-      }
-      
+    
