--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ transition-delay: 0.5s;
 color: white;
 /* transition-timing-function: ease-out; */
 transform: scale(2) translate(25px, 0px);
+transition-property: all;
     }
 
     .opening {
@@ -69,6 +70,7 @@ transform: scale(2) translate(25px, 0px);
       transition-delay: 0.5s;
       transform: translate(100px, 0px);
       animation-fill-mode: both;
+      transition-property: all;
 
     }
 
