--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
     color: white;
     padding-left: 30%;
     border-left: 30%;
-    padding-top: 15%;
+    padding-top: 17%;
     /* padding-right: 40%; */
 }
 
@@ -45,31 +45,63 @@ a:hover {
 
 /* page one */
 
-#so {
-    /* background-color: blue; */
-   width: auto;
-transition-duration: 1.5s; 
-transition-delay: 0.5s;
-color: white;
-/* transition-timing-function: ease-out; */
-transform: scale(2) translate(25px, 0px);
-    }
 
     .opening {
       display: flex;
       flex-direction: row;
     }
+    #doesnt {
+      animation-name: reveal;
+      animation-duration: 2s;
+      /* animation-delay: 0.5s; */
+      animation-fill-mode: both;
+      padding-right: 1%;
+    }
+
+    #this {
+      animation-name: reveal;
+      animation-duration: 2s;
+      animation-delay: 0.5s;
+      animation-fill-mode: both;
+      padding-right: 1%;
+    }
+    #guitar {
+      animation-name: reveal;
+      animation-duration: 2s;
+      animation-delay: 1s;
+      animation-fill-mode: both;
+      padding-right: 1%;
+    }
+    #sound {
+      animation-name: reveal;
+      animation-duration: 2s;
+      animation-delay: 1.5s;
+      animation-fill-mode: both;
+      padding-right: 1%;
+    }
+
+    #so {
+      /* background-color: blue; */
+     width: auto;
+     /* start of code modified from: https://seven.hashnode.dev/chaining-animations-in-css */
+     animation: scaleUp 1.5s 2s, reveal 2s 2.2s;
+     /* end of code modified from: https://seven.hashnode.dev/chaining-animations-in-css */
+  animation-fill-mode: both;
+  color: white;
+  padding-left: 1%;
+  padding-right: 1%;
+  animation-timing-function: ease-out;
+
+      }
+
+      #good {
+        animation: reveal 1.5s 2.8s, slideRight 1.5s 2s ease-out;
+      animation-fill-mode: both;
+      }
+  
     .soundSoGood {
       display: flex;
       flex-direction: row;
-    }
-
-    #good {
-      transition-duration: 1.5s;
-      transition-delay: 0.5s;
-      transform: translate(100px, 0px);
-      animation-fill-mode: both;
-
     }
 
     
@@ -107,12 +139,14 @@ transform: scale(2) translate(25px, 0px);
       } */
 
         /* modiefied code from https://codepen.io/qrac/pen/MRPJLB */
-      
-      section {
-        /* display: flex; */
-        /* flex-direction: row; */
+      @keyframes scaleUp {
+       from { transform: scale(1) translate(0px, 0px);}
+       to {transform: scale(2 ) translate(25px, 0px);}
       }
-    
+      @keyframes slideRight {
+        from  {transform: translateX(0px);}
+        to {transform: translateX(100px);}
+      }
     
 
 
@@ -136,7 +170,7 @@ transform: scale(2) translate(25px, 0px);
     animation-name: reveal;
     animation-duration: 2s;
     animation-delay: 0s;
-    padding-right: 2%;
+    padding-right: 1%;
     
     }
     
@@ -145,7 +179,7 @@ transform: scale(2) translate(25px, 0px);
     animation-duration: 2s;
     animation-delay: 1s;
     animation-fill-mode: both;
-    padding-right: 2%;
+    padding-right: 1%;
 
     
     
@@ -156,7 +190,7 @@ transform: scale(2) translate(25px, 0px);
         animation-duration: 2s;
         animation-delay: 1.5s;
         animation-fill-mode: both;
-        padding-right: 2%;
+        padding-right: 1%;
 
         }
     
@@ -168,10 +202,50 @@ transform: scale(2) translate(25px, 0px);
 
     /* page three */
 
-    .inOuterSpace {
-        /* display: flex; */
-        /* flex-direction: ; */
+    .threeI {
+        display: flex;
+        flex-direction:row ;
+        flex-wrap: nowrap;
+        padding-right: 2% ;
     }
+
+    .threeII {
+      display: flex;
+      flex-direction:row ;
+      flex-wrap:nowrap;
+      padding-right: 2%;
+  }
+
+  #bigBlueWorld {
+    padding-left: 1%;
+    color: blue;
+  }
+
+  #withMy {
+    padding-right: 1%;
+
+  }
+
+#head {
+  padding-right: 1%;
+  /* transform: translateY( -250px) rotate(-5deg);
+  transition-duration: 1.5s;
+  transition-delay: 2s; */
+  animation-name: slideUp;
+  animation-duration: 1.5s;
+  animation-delay: 1.5s;
+  animation-fill-mode: both;
+
+}
+  #upInOuter {
+padding-right: 1%;
+  }
+
+  @keyframes slideUp {
+    from {transform: translateY(0px) rotate(0deg);}
+    to {transform: translateY(-250px) rotate(-5deg);}
+  }
+  
 
     /* page five */
 
