--- a/css/style.css
+++ b/css/style.css
@@ -12,20 +12,18 @@ body {
 
     background-color: #90D5FF;
     color: white;
-    padding-left: 30%;
-    border-left: 30%;
-    padding-top: 17%;
-    /* padding-right: 40%; */
+    /* padding-left: 30%; */
+    /* border-left: 30%; */
+    padding-top: 20%;
+    /* padding-right: 30%; */
 }
 
 h4 {
    display: flex;
    flex-direction: column;
-   justify-content:center;
    /* align-items:center; */
-   text-align: left ;
    font-family: "dynapuff", sans-serif;
-   font-size: 3em;
+   font-size: 4em;
 
 }
 
@@ -45,17 +43,26 @@ a:hover {
 
 /* page one */
 
-
-    .opening {
-      display: flex;
+   .oneI {
+    display: flex;
       flex-direction: row;
-    }
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      /* center align help from: https://www.w3schools.com/css/css_align.asp */
+ }
+ .oneII {
+  display: flex;
+  flex-direction: row;
+      align-items: center;
+      justify-content: center;
+ }
     #doesnt {
       animation-name: reveal;
       animation-duration: 2s;
       /* animation-delay: 0.5s; */
       animation-fill-mode: both;
-      padding-right: 1%;
+      padding-right: 2%;
     }
 
     #this {
@@ -63,21 +70,20 @@ a:hover {
       animation-duration: 2s;
       animation-delay: 0.5s;
       animation-fill-mode: both;
-      padding-right: 1%;
+      padding-right: 2%;
     }
     #guitar {
       animation-name: reveal;
       animation-duration: 2s;
       animation-delay: 1s;
       animation-fill-mode: both;
-      padding-right: 1%;
+      padding-right: 2%;
     }
     #sound {
-      animation-name: reveal;
-      animation-duration: 2s;
-      animation-delay: 1.5s;
+      animation: reveal 2s 1.5s, slideLeft 1.5s 2.2s ease-out;
+
       animation-fill-mode: both;
-      padding-right: 1%;
+      padding-right: 2%;
     }
 
     #so {
@@ -87,65 +93,29 @@ a:hover {
      animation: scaleUp 1.5s 2s, reveal 2s 2.2s;
      /* end of code modified from: https://seven.hashnode.dev/chaining-animations-in-css */
   animation-fill-mode: both;
-  color: white;
-  padding-left: 1%;
   padding-right: 1%;
   animation-timing-function: ease-out;
 
       }
 
       #good {
-        animation: reveal 2s 3s, slideRight 1s 1s ease-out;
+        animation: reveal 2s 3s, slideRight 1.5s 2.2s ease-out;
       animation-fill-mode: both;
       }
-  
-    .soundSoGood {
-      display: flex;
-      flex-direction: row;
-    }
 
-    
-
-    /* start of code modified from https://codepen.io/qrac/pen/MRPJLB */
-
-    /* .logo.is-animetion {
-        margin-top: 0.6em;
-      }
-      
-      .logo.is-animetion span {
-        display: inline-block;
-        animation: wave-text 1s ease-in-out ;
-      }
-      
-      .logo.is-animetion {
-        span:nth-of-type(1){ animation-delay: 1.0s; }
-        span:nth-of-type(2){ animation-delay: 1.1s; }
-        span:nth-of-type(3){ animation-delay: 1.2s; }
-        span:nth-of-type(4){ animation-delay: 1.3s; }
-        span:nth-of-type(5){ animation-delay: 1.4s; }
-      }
-    
-      
-      @keyframes wave-text{
-        00%{
-          transform: translateY(0em);
-        }
-        60%{
-          transform: translateY(-0.6em);
-        }
-        100%{
-          transform: translateY(0em);
-        }
-      } */
-
-        /* modiefied code from https://codepen.io/qrac/pen/MRPJLB */
       @keyframes scaleUp {
-       from { transform: scale(1) translate(0px, 0px);}
-       to {transform: scale(2 ) translate(25px, 0px);}
+       from { transform: scale(1);}
+       to {transform: scale(2 );}
       }
+
       @keyframes slideRight {
         from  {transform: translateX(0px);}
-        to {transform: translateX(100px);}
+        to {transform: translateX(75px);}
+      }
+
+      @keyframes slideLeft {
+        from {transform: translateX(0px);}
+        to {transform: translateX(-75px);}
       }
     
 
@@ -158,11 +128,14 @@ a:hover {
         animation-delay: 4.5s;
         animation-fill-mode: both;
         animation-timing-function: ease-out;
+        text-align: center;
     }
 
     .mmm {
         display: flex;
         flex-direction: row;
+        justify-content: center;
+        align-items: center;
        
     }
     
@@ -170,7 +143,7 @@ a:hover {
     animation-name: reveal;
     animation-duration: 2s;
     animation-delay: 0s;
-    padding-right: 1%;
+    padding-right: 2%;
     
     }
     
@@ -179,7 +152,7 @@ a:hover {
     animation-duration: 2s;
     animation-delay: 1s;
     animation-fill-mode: both;
-    padding-right: 1%;
+    padding-right: 2%;
 
     
     
@@ -190,7 +163,7 @@ a:hover {
         animation-duration: 2s;
         animation-delay: 1.5s;
         animation-fill-mode: both;
-        padding-right: 1%;
+        padding-right: 2%;
 
         }
     
@@ -205,45 +178,75 @@ a:hover {
     .threeI {
         display: flex;
         flex-direction:row ;
-        flex-wrap: nowrap;
+        /* flex-wrap: nowrap; */
         padding-right: 2% ;
     }
-
-    .threeII {
-      display: flex;
-      flex-direction:row ;
-      flex-wrap:nowrap;
-      padding-right: 2%;
-  }
-
-  #bigBlueWorld {
-    padding-left: 1%;
+  #blue {
     color: blue;
   }
 
-  #withMy {
-    padding-right: 1%;
+
+
+
+    /* page four */
+  .four {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  #with {
+    padding-right: 2%;
+    animation: reveal 2s;
+    animation-fill-mode: both;
+
+  }
+  #my {
+    padding-right: 2%;
+    animation: reveal 2s 0.25s;
+    animation-fill-mode: both;
 
   }
 
 #head {
-  padding-right: 1%;
+  padding-right: 2%;
   /* transform: translateY( -250px) rotate(-5deg);
   transition-duration: 1.5s;
   transition-delay: 2s; */
-  animation-name: slideUp;
-  animation-duration: 1.5s;
-  animation-delay: 1.5s;
+  animation: reveal 2s 0.6s, slideUp 1.5s 1.5s;
   animation-fill-mode: both;
 
 }
-  #upInOuter {
-padding-right: 1%;
+  #up {
+    animation: slideUp 1.5s 1.5s, reveal 2s 1s;
+    animation-fill-mode: both;;
+    animation-fill-mode: both;
+padding-right: 2%;
   }
+#in {
+padding-right: 2%;
+animation: reveal 2s 1.4s;
+animation-fill-mode: both;
+}
+
+#outer {
+  animation: reveal 2s  1.8s;
+  animation-fill-mode: both;
+  padding-right: 2%;
+}
+#space {
+  animation: reveal 2s 2.4s;
+  animation-fill-mode: both;
+  padding-right: 2%;
+}
 
   @keyframes slideUp {
     from {transform: translateY(0px) rotate(0deg);}
-    to {transform: translateY(-250px) rotate(-5deg);}
+    to {transform: translateY(-200px) rotate(-5deg);}
+  }
+  @keyframes space {
+    from {background-color: #90D5FF;}
+    to {background-color: black;}
   }
   
 
