--- a/four/css/style.css
+++ b/four/css/style.css
@@ -1,48 +1,112 @@
 
 
+* {
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
+}
+
+   
 body {
+    width: 100%;
+    min-height: 100vh;
+    /* display: inline-block; */
     background-color: #90D5FF;
     color: white;
-    padding-left: 30%;
-    padding-top: 10%;
-    /* padding-right: 40%; */
+    /* padding-left: 30%; */
+    /* border-left: 30%; */
+    padding-top: 20%;
+    /* padding-right: 30%; */
+    animation: space 1.5s 1.5s;
+    animation-fill-mode: both;
+}
+p {
+    font-family: "dynapuff", sans-serif;
+    font-size: 5pt;
 }
 
 h4 {
    display: flex;
    flex-direction: column;
-   justify-content:center;
-   font-size: 3em;
    /* align-items:center; */
-   text-align: left ;
-
    font-family: "dynapuff", sans-serif;
-
-
-}
-
-h4:hover {
+   font-size: 4em;
 
 }
+
+
 
 a {
     text-decoration: none;
+    color: #FFDE21;
+    transition-duration: 2s;
 }
 
-#so {
-transition-duration: 2s;
-/* transition-delay: 1.5s;  */
-
+a:hover {
+    /* color: white; */
+    /* transform: scale(1.5); */
+    /* transform: scale(2); */
 }
 
-#so:hover {
-  transform: scale(2);
+.four {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  #with {
+    padding-right: 2%;
+    animation: reveal 2s;
+    animation-fill-mode: both;
+
+  }
+  #my {
+    padding-right: 2%;
+    animation: reveal 2s 0.25s;
+    animation-fill-mode: both;
+
+  }
+
+#head {
+  padding-right: 2%;
+  /* transform: translateY( -250px) rotate(-5deg);
+  transition-duration: 1.5s;
+  transition-delay: 2s; */
+  animation: reveal 2s 0.6s, slideUp 1.5s 1.5s;
+  animation-fill-mode: both;
+
+}
+  #up {
+    animation: slideUp 1.5s 1.5s, reveal 2s 1s;
+    animation-fill-mode: both;;
+    animation-fill-mode: both;
+padding-right: 2%;
+  }
+#in {
+padding-right: 2%;
+animation: reveal 2s 1.4s;
+animation-fill-mode: both;
 }
 
-#mOne {
-
+#outer {
+  animation: reveal 2s  1.8s;
+  animation-fill-mode: both;
+  padding-right: 2%;
 }
-
-#good {
-    color: green;
+#space {
+  animation: reveal 2s 2.4s;
+  animation-fill-mode: both;
+  padding-right: 2%;
 }
+  @keyframes slideUp {
+    from {transform: translateY(0px) rotate(0deg);}
+    to {transform: translateY(-200px) rotate(-5deg);}
+  }
+  @keyframes space {
+    from {background-color: #90D5FF;}
+    to {background-color: black;}
+  }
+  @keyframes reveal {
+    from {opacity:0;}
+    to {opacity:1;}
+  }
