--- a/css/style.css
+++ b/css/style.css
@@ -8,20 +8,15 @@
 body {
     width: 100%;
     min-height: 100vh;
-    /* display: inline-block; */
-
     background-color: #90D5FF;
     color: white;
-    /* padding-left: 30%; */
-    /* border-left: 30%; */
     padding-top: 20%;
-    /* padding-right: 30%; */
+
 }
 
 h4 {
    display: flex;
    flex-direction: column;
-   /* align-items:center; */
    font-family: "dynapuff", sans-serif;
    font-size: 4em;
 
@@ -33,12 +28,6 @@ a {
     text-decoration: none;
     color: #FFDE21;
     transition-duration: 2s;
-}
-
-a:hover {
-    /* color: white; */
-    /* transform: scale(1.5); */
-    /* transform: scale(2); */
 }
 
 /* page one */
@@ -60,7 +49,6 @@ a:hover {
     #doesnt {
       animation-name: reveal;
       animation-duration: 2s;
-      /* animation-delay: 0.5s; */
       animation-fill-mode: both;
       padding-right: 2%;
     }
@@ -87,7 +75,6 @@ a:hover {
     }
 
     #so {
-      /* background-color: blue; */
      width: auto;
      /* start of code modified from: https://seven.hashnode.dev/chaining-animations-in-css */
      animation: scaleUp 1.5s 2s, reveal 2s 2.2s;
@@ -122,6 +109,7 @@ a:hover {
 
 
 /* page two*/
+
     #soSweet {
         animation-name: reveal;
         animation-duration: 1s;
@@ -173,6 +161,9 @@ a:hover {
        
     }
 
+
+
+
     /* page three */
 
     .threeI {
@@ -187,69 +178,49 @@ a:hover {
 
 
 
+    /* page six */
+    .six {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+    }
+    #when {
+      padding-right: 1%;
+      animation: reveal 2s;
+      animation-fill-mode: both;
+    }
+    #i {
+      padding-right: 1%;
+      animation: reveal 2s 0.2s;
+      animation-fill-mode: both;
+    }
+    #see {
+      padding-right: 1%;
+      animation: reveal 2s 0.4s;
+      animation-fill-mode: both;
+    }
+    #trouble {
+      padding-right: 1%;
+      animation: reveal 2s 0.7s;
+      animation-fill-mode: both;
+      color: red;
+    }
+    #come {
+      padding-right: 1%;
+      animation: reveal 2s 1.1s;
+      animation-fill-mode: both;
+    }
+    #myI {
+      animation: reveal 2s 1.6s;
+      animation-fill-mode: both;
+      padding-right: 1%;
+    }
+    #way {
+      animation: reveal 2s 2.1s;
+      animation-fill-mode: both;
+      padding-right: 1%;
+    }
 
-    /* page four */
-  .four {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-  }
-  #with {
-    padding-right: 2%;
-    animation: reveal 2s;
-    animation-fill-mode: both;
-
-  }
-  #my {
-    padding-right: 2%;
-    animation: reveal 2s 0.25s;
-    animation-fill-mode: both;
-
-  }
-
-#head {
-  padding-right: 2%;
-  /* transform: translateY( -250px) rotate(-5deg);
-  transition-duration: 1.5s;
-  transition-delay: 2s; */
-  animation: reveal 2s 0.6s, slideUp 1.5s 1.5s;
-  animation-fill-mode: both;
-
-}
-  #up {
-    animation: slideUp 1.5s 1.5s, reveal 2s 1s;
-    animation-fill-mode: both;;
-    animation-fill-mode: both;
-padding-right: 2%;
-  }
-#in {
-padding-right: 2%;
-animation: reveal 2s 1.4s;
-animation-fill-mode: both;
-}
-
-#outer {
-  animation: reveal 2s  1.8s;
-  animation-fill-mode: both;
-  padding-right: 2%;
-}
-#space {
-  animation: reveal 2s 2.4s;
-  animation-fill-mode: both;
-  padding-right: 2%;
-}
-
-  @keyframes slideUp {
-    from {transform: translateY(0px) rotate(0deg);}
-    to {transform: translateY(-200px) rotate(-5deg);}
-  }
-  @keyframes space {
-    from {background-color: #90D5FF;}
-    to {background-color: black;}
-  }
-  
-
-    /* page five */
 
     
