--- a/css/style.css
+++ b/css/style.css
@@ -222,5 +222,37 @@ a {
       padding-right: 1%;
     }
 
+    /* page seven */
+
+    .seven {
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+    }
+
+    #iII {
+      padding-right: 1%;
+      animation: reveal 2s;
+      animation-fill-mode: both;
+    }
+    #be {
+      padding-right: 1%;
+      animation: reveal 2s 0.2s;
+      animation-fill-mode: both;
+    }
+    #makin {
+      padding-right: 1%;
+      animation: reveal 2s 0.6s;
+      animation-fill-mode: both;
+    }
+    #lemonade {
+      padding-right: 1%;
+      animation: reveal 2s 1s;
+      animation-fill-mode: both;
+    }
+
+
+
 
     
