--- a/six/css/style.css
+++ b/six/css/style.css
@@ -1,48 +1,120 @@
+* {
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
+}
 
 
 body {
+    width: 100%;
+    min-height: 100vh;
     background-color: #90D5FF;
     color: white;
-    padding-left: 30%;
-    padding-top: 10%;
-    /* padding-right: 40%; */
+    padding-top: 20%;
+    animation: space 2s;
+
 }
 
 h4 {
    display: flex;
    flex-direction: column;
-   justify-content:center;
-   font-size: 3em;
-   /* align-items:center; */
-   text-align: left ;
-
    font-family: "dynapuff", sans-serif;
-
-
-}
-
-h4:hover {
+   font-size: 4em;
 
 }
+
+
 
 a {
     text-decoration: none;
+    color: #FFDE21;
+    transition-duration: 2s;
 }
 
-#so {
-transition-duration: 2s;
-/* transition-delay: 1.5s;  */
+.six {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  #when {
+    padding-right: 1%;
+    animation: reveal 2s;
+    animation-fill-mode: both;
+  }
+  #i {
+    padding-right: 1%;
+    animation: reveal 2s 0.2s;
+    animation-fill-mode: both;
+  }
+  #see {
+    padding-right: 1%;
+    animation: reveal 2s 0.4s;
+    animation-fill-mode: both;
+  }
+  #trouble {
+    padding-right: 1%;
+    animation: reveal 2s 0.7s;
+    animation-fill-mode: both;
+    color: red;
+  }
+  #come {
+    padding-right: 1%;
+    animation: reveal 2s 1.1s;
+    animation-fill-mode: both;
+  }
+  #myI {
+    animation: reveal 2s 1.6s;
+    animation-fill-mode: both;
+    padding-right: 1%;
+  }
+  #way {
+    animation: reveal 2s 2.1s;
+    animation-fill-mode: both;
+    padding-right: 1%;
+  }
 
-}
+  /* page seven */
 
-#so:hover {
-  transform: scale(2);
-}
+  .seven {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 
-#mOne {
+  #iII {
+    padding-right: 1%;
+    animation: reveal 2s;
+    animation-fill-mode: both;
+  }
+  #be {
+    padding-right: 1%;
+    animation: reveal 2s 0.2s;
+    animation-fill-mode: both;
+  }
+  #makin {
+    padding-right: 1%;
+    animation: reveal 2s 0.6s;
+    animation-fill-mode: both;
+  }
+  #lemonade {
+    padding-right: 1%;
+    animation: reveal 2s 1s;
+    animation-fill-mode: both;
+  }
 
-}
+  @keyframes reveal {
+    from {opacity:0;}
+    to {opacity:1;}
+  }
+    
+    @keyframes space {
+        from {background-color: #90D5FF;}
+        to {background-color: black;}
+      }
+ 
 
-#good {
-    color: green;
-}
+
+
+  
