--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ a {
       animation-name: reveal;
       animation-duration: 2s;
       animation-fill-mode: both;
-      padding-right: 2%;
+      padding-right: 1%;
     }
 
     #this {
@@ -58,20 +58,20 @@ a {
       animation-duration: 2s;
       animation-delay: 0.5s;
       animation-fill-mode: both;
-      padding-right: 2%;
+      padding-right: 1%;
     }
     #guitar {
       animation-name: reveal;
       animation-duration: 2s;
       animation-delay: 1s;
       animation-fill-mode: both;
-      padding-right: 2%;
+      padding-right: 1%;
     }
     #sound {
       animation: reveal 2s 1.5s, slideLeft 1.5s 2.2s ease-out;
 
       animation-fill-mode: both;
-      padding-right: 2%;
+      padding-right: 1%;
     }
 
     #so {
@@ -171,10 +171,34 @@ a {
         flex-direction:row ;
         /* flex-wrap: nowrap; */
         padding-right: 2% ;
+        align-items: center;
+        justify-content: center;
+    }
+    #living {
+      padding-right: 1%;
+    }
+    #inI {
+      padding-right: 1%;
+    }
+    
+    #thisII {
+      padding-right: 1%;
+  
+    }
+    #big {
+      padding-right: 1%;
+    
     }
   #blue {
-    color: blue;
+    color: #00008A;
+    padding-right: 1%;
+  
   }
+  #world {
+    padding-right: 1%;
+  
+  }
+
 
 
 
@@ -250,6 +274,18 @@ a {
       padding-right: 1%;
       animation: reveal 2s 1s;
       animation-fill-mode: both;
+    }
+
+    /* page eight */
+    .eight {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .eightI {
+      display: flex;
+      flex-direction: row;
     }
 
 
