--- a/css/style.css
+++ b/css/style.css
@@ -265,33 +265,6 @@ a {
 
     /* page seven */
 
-    .seven {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-    }
-
-    #iII {
-      padding-right: 1%;
-      animation: reveal 2s;
-      animation-fill-mode: both;
-    }
-    #be {
-      padding-right: 1%;
-      animation: reveal 2s 0.2s;
-      animation-fill-mode: both;
-    }
-    #makin {
-      padding-right: 1%;
-      animation: reveal 2s 0.6s;
-      animation-fill-mode: both;
-    }
-    #lemonade {
-      padding-right: 1%;
-      animation: reveal 2s 1s;
-      animation-fill-mode: both;
-    }
 
     /* page eight */
     .eight {
@@ -299,11 +272,25 @@ a {
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      animation: reveal 3s ;
+      animation-fill-mode: both;
     }
     .eightI {
       display: flex;
       flex-direction: row;
+      color: #FFDE21;
+      align-items: center;
+      justify-content: center;
+      animation: reveal 3s 3s;
+      animation-fill-mode: both;
     }
+    /* page nine */
+  .nine {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
 
 
 
