--- a/seven/css/style.css
+++ b/seven/css/style.css
@@ -1,48 +1,71 @@
+* {
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
+}
 
 
 body {
+    width: 100%;
+    min-height: 100vh;
     background-color: #90D5FF;
     color: white;
-    padding-left: 30%;
-    padding-top: 10%;
-    /* padding-right: 40%; */
+    padding-top: 20%;
+    animation: lemonade 2s 1s;
+    animation-fill-mode: both;
+
 }
 
 h4 {
    display: flex;
    flex-direction: column;
-   justify-content:center;
-   font-size: 3em;
-   /* align-items:center; */
-   text-align: left ;
-
    font-family: "dynapuff", sans-serif;
-
-
-}
-
-h4:hover {
+   font-size: 4em;
 
 }
+
+
 
 a {
     text-decoration: none;
+    color: #FFDE21;
+    transition-duration: 2s;
 }
 
-#so {
-transition-duration: 2s;
-/* transition-delay: 1.5s;  */
+.seven {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 
+  #iII {
+    padding-right: 1%;
+    animation: reveal 2s;
+    animation-fill-mode: both;
+  }
+  #be {
+    padding-right: 1%;
+    animation: reveal 2s 0.2s;
+    animation-fill-mode: both;
+  }
+  #makin {
+    padding-right: 1%;
+    animation: reveal 2s 0.6s;
+    animation-fill-mode: both;
+  }
+  #lemonade {
+    padding-right: 1%;
+    animation: reveal 2s 1s;
+    animation-fill-mode: both;
+  }
+@keyframes lemonade {
+    from {background-color: black;}
+    to { background-color: #90D5FF;}
 }
 
-#so:hover {
-  transform: scale(2);
-}
-
-#mOne {
-
-}
-
-#good {
-    color: green;
+@keyframes reveal {
+    from {opacity: 0;}
+    to {opacity: 1;}
+    
 }
