--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,11 @@ h4 {
 
 }
 
+h5 {
+  font-family: "dynapuff", sans-serif;
+  font-size: 2.5em;
+}
+
 
 
 a {
@@ -290,7 +295,10 @@ a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    animation: reveal 2s;
+    animation-fill-mode: both;
   }
+
 
 
 
