--- a/six/css/style.css
+++ b/six/css/style.css
@@ -57,7 +57,7 @@ a {
     padding-right: 1%;
     animation: reveal 2s 0.7s;
     animation-fill-mode: both;
-    color: red;
+    color: #FF2C2C;
   }
   #come {
     padding-right: 1%;
